--- a/LABA3.csproj
+++ b/LABA3.csproj
@@ -52,7 +52,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="myPoint.cs" />
+    <Compile Include="myCluster.cs" />
+    <Compile Include="myPixel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
